--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A nature-themed responsive layout built using HTML and CSS.">
+    <meta name="author" content="Badal Panwar">
     <title>Nature Layout</title>
     <link rel="stylesheet" href="style.css">
 </head>
